# mcp-analytics-python

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
canary/: deploy-vercel.mjs  mcp-http-smoke.mjs  run-harness-canary.mjs  session-evidence.mjs
canary/vercel/: requirements.txt  vercel.json
canary/vercel/api/: index.py
examples/minimal/: README.md  requirements.txt  server.py
scripts/: platform_canary.py  run_publish_canary.py
src/armature_mcp_analytics/: __init__.py  capability.py  emit.py  events.py  queue.py  recorder.py  redact_secrets.py  sanitize.py  schema.py  server.py  stateless_http.py  types.py  utils.py
tests/: test_e2e_http.py  test_e2e_official_sdk_http.py  test_e2e_stdio.py  test_emit.py  test_fastmcp_adapter.py  test_official_sdk_headers.py  test_privacy.py  test_recorder.py  test_request_capability.py  test_schema.py  test_stateless_http.py  test_telemetry_capture.py
tests/fixtures/: future_annotations_tools.py  http_instrumented_server.py  official_sdk_http_instrumented_server.py  stdio_instrumented_server.py  telemetry_contract_vectors.json
